[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/EventBus/TagNode/TagNode.gd" type="Script" id=1]
[ext_resource path="res://addons/EventBus/icons/delete.png" type="Texture" id=2]

[node name="TagNode" type="MarginContainer"]
margin_left = 34.0
margin_right = 328.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="SelectButton" type="Button" parent="."]
margin_right = 294.0
margin_bottom = 80.0
focus_mode = 0
toggle_mode = true

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 294.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 64 )
mouse_filter = 2
custom_constants/separation = 20

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="VBoxContainer"]
margin_bottom = 80.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_left = 20.0
margin_right = 70.0
margin_bottom = 80.0
mouse_filter = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="VBoxContainer/CenterContainer"]
margin_top = 15.0
margin_right = 50.0
margin_bottom = 65.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 1, 1, 1, 1 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_left = 90.0
margin_top = 33.0
margin_right = 190.0
margin_bottom = 47.0
size_flags_horizontal = 3
text = "all tags"

[node name="DeleteButton" type="Button" parent="VBoxContainer"]
margin_left = 210.0
margin_right = 274.0
margin_bottom = 80.0
rect_min_size = Vector2( 64, 64 )
size_flags_vertical = 3
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="VBoxContainer"]
margin_left = 294.0
margin_right = 294.0
margin_bottom = 80.0

[connection signal="pressed" from="SelectButton" to="." method="_on_SelectButton_pressed"]
[connection signal="color_changed" from="VBoxContainer/CenterContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="VBoxContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
